--- a/src/Components/Pages/fabrics/Fabrics.css
+++ b/src/Components/Pages/fabrics/Fabrics.css
@@ -9,7 +9,7 @@
 
 }
 .fabric > .carousel{
-    background-color: black;
+    background-color: lavender;
 }
 
 .fabric>h4{
@@ -17,7 +17,8 @@
   margin:0;
   font-family: 'Square Peg', cursive;
     font-size: 45px;
-    background-color: black;
+    background-color: white;
+    color:black;
 }
 
 
