--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,50 +1,95 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
+
 .footercontainer{
     height: 260px;
     background-color: black;
     overflow: hidden;
-    
 }
 
 
 .footerinnercontainer{
     height: 100%;
-    
     margin-top: 20px;
     display: flex;
-    flex-direction: column;
     padding: 20px;
     color: white;
-    align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
-.footerinnercontainer > p{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 img{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
 }
 
-.footerinnercontainer > h3{
-    font-size: 40px;
-    /* letter-spacing:10px; */
+.details > h3{
+    font-size: 2em;
+    letter-spacing:6px;
     font-family: 'Great Vibes', cursive;
     cursor: pointer;
 }
 .footerinnercontainer > div{
-    padding: 10px;
+    padding:8px;
     font-size: 17px;
     font-family: 'Josefin Sans', sans-serif;
 }
 
 .footerinnercontainer >h4{
     margin-top: 10px;
-    font-family: 'Josefin Sans', sans-serif;
+    /* font-family: 'Josefin Sans', sans-serif; */
+}
+.column{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: flex-start;
+}
+.column >p{
+   
+    font-size: 1.4rem;
+}
+.column >h4{
+    font-size: 0.9rem;
+    color: rgb(200, 193, 193);
 }
 
+.details{
+    flex:0.6;
+}
+
+
+.footer-links{
+    display: flex;
+    align-items: flex-start;
+}
 .footer-links > img{
+
     margin: -3px 10px 10px 10px;
 }
+
+
+@media screen and (max-width: 600px) {
+    .details > h3{
+        font-size: 1.3em;
+    }
+    .details >div{
+        font-size: 1em;
+    }
+    .column >p{
+        font-size: 1.2rem;
+    }
+    .column >h4{
+        font-size: 0.9rem;
+    }
+    img{
+        width: 25px;
+        height: 25px;
+    }
+    .footer-links > img{
+
+        margin: 0px;
+    }
+  }
+  
