--- a/src/Components/Landing/Widget.css
+++ b/src/Components/Landing/Widget.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 .lwidget{
     display: flex;
     position: relative;
@@ -35,6 +35,7 @@
     transition: .5s ease;
     opacity: 0;
     position: absolute;
+
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -50,7 +51,7 @@
     opacity: 1;
   }
   
-  .text {
+  .button {
     background-color: rgb(47, 0, 33);
     color: white;
     font-size: 16px;
@@ -58,7 +59,11 @@
   }
 
 
-
+.text{
+  margin: 50px;
+  font-family: 'Pacifico', cursive;
+  font-size: 30px;
+}
 
 
   
