--- a/src/Components/Landing/landing.css
+++ b/src/Components/Landing/landing.css
@@ -95,7 +95,9 @@ img{
 .bsheader
 {
     font-size: 36px;
-    font-weight: 400;
+    font-weight: 1000px;
+    font-family: 'Josefin Sans', sans-serif;
+
 }
 
 .bsgrid{
