--- a/src/Components/Landing/landing.css
+++ b/src/Components/Landing/landing.css
@@ -97,7 +97,7 @@ img{
     font-size: 36px;
     font-weight: 1000px;
     font-family: 'Josefin Sans', sans-serif;
-
+    font-weight: 700;
 }
 
 .bsgrid{
