--- a/src/Components/Landing/newlanding.css
+++ b/src/Components/Landing/newlanding.css
@@ -6,13 +6,17 @@
 
 .landiconsdiv{
     display: flex;
+
 }
+
 
 .landbgdiv{
     display: flex;
     flex-direction: column;
     align-items: center;
     background-image: url('./bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .landtit{
