--- a/src/Components/Landing/newlanding.css
+++ b/src/Components/Landing/newlanding.css
@@ -1,7 +1,11 @@
 .landsec1{
     height: 450px;
     width: 100%;
-    background-color: #270641;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .landiconsdiv{
@@ -79,18 +83,17 @@
     /* margin-top: 10px; */
 }
 
-.Landingtesti{
-    font-family: 'Poppins', sans-serif;
-    font-size: 35px;
-    margin-top: 100px;
+
+.caro{
+    width:500px !important;
+}
+.carousel-inner{
+width: 1150px;
 }
 
-.testcont{
-    margin-top: 30px;
-    width: 80%;
-    border-radius: 40px;
-    background-color: #4C2A76;
-    height: 400px;
-    margin-bottom: 50px;
-    padding: 30px;
+@media only screen and (max-width:1200px){
+    .carousel-inner{
+        width: 900px;
+        }
+        
 }
