--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
 
 .prenavcontainer{
     height: 20px;
-    width: 100vw;
+    width: 100%;
     background-color: rgb(47, 0, 33);
     color: white;
     font-size: 12px;
@@ -17,7 +17,7 @@
 }
 
 .navcontainer{
-    width: 100vw;
+    width: 100%;
     height: 65px;
     display: flex;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
