--- a/src/Components/Pages/ImageCons/ImageCons.css
+++ b/src/Components/Pages/ImageCons/ImageCons.css
@@ -30,10 +30,15 @@
     background-image: url("../../Landing/bg.png");
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 
 }
 
 .icons{
+    
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -45,29 +50,37 @@
     justify-content: center;
     align-items: center;
     width:200px;
+    margin-top: 40px;
 }
-.icon-holder >p{
+.icon-holder >span{
     
-    line-height: 34px;
+    /* line-height: 34px; */
+    font-size: 16px;
     color: #270641;
     font-family: 'Poppins', sans-serif;
-    font-size: 0.9rem;
-    font-weight: 600;
-    margin-top: 10px;
+    /* font-size: 0.9rem; */
+    /* font-weight: 600; */
+    /* margin-top: 10px; */
+    text-align: center;
 }
 
 .img-row{
+    margin-top: 40px;
     display: flex;
     padding:20px;
     justify-content: center;
+
    
 }
+
+
 .img-row>img{
 
     width: 400px;
     height: 300px;
     object-fit: cover;
     border-radius: 40px;
+    
 
 
 }
@@ -76,7 +89,7 @@
     display: flex;
     width: 50%;
     font-size: 1.2rem;
-    font-weight: 600;
+
     justify-content: center;
     align-items: center;
     margin-left: 20px;
@@ -87,6 +100,7 @@
    padding: 35px;
     justify-content: center;
     align-items: center;
+    margin-top: 30px;
 }
 .steps >img{
     width: 800px;
@@ -94,8 +108,9 @@
 }
 
 .imageform{
-    margin-left: 50px;
-     margin-bottom: 0;
+    /* margin-left: 50px; */
+    width: 80%;
+    margin-bottom: 0;
 }
 
 
