--- a/src/Components/Landing/newlanding.css
+++ b/src/Components/Landing/newlanding.css
@@ -1,15 +1,21 @@
 .landsec1{
-    height: 450px;
+    height: 550px;
     width: 100%;
     background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 
+}
+.landsec1>P{
+    color: #FFB8BC;
+    
 }
 
 .landiconsdiv{
     display: flex;
+    margin-bottom: -25px;
 
 }
 
@@ -86,11 +92,11 @@
 
 
 .caro{
-    width:500px !important;
+    width:120% !important;
 
 }
 .carousel-inner{
-    width: 90%
+    width: 120% ;
 }
 
 @media only screen and (max-width:1200px){
