--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -20,10 +20,10 @@
     width: 100%;
     height: 65px;
     display: flex;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
     justify-content: space-evenly;
     align-items: center;
-    background-color: white;
+    background-color: #DDFDFF;
     color: black;
 }
 
