--- a/src/Components/Pages/ImageCons/ImageCons.css
+++ b/src/Components/Pages/ImageCons/ImageCons.css
@@ -106,7 +106,7 @@
     width: 400px;
     height: 300px;
     object-fit: cover;
-    border-radius: 40px;
+    /* border-radius: 40px; */
     
 
 
@@ -119,7 +119,7 @@
 
     justify-content: center;
     align-items: center;
-    margin-left: 20px;
+    margin-left: 50px;
 }
 
 .steps{
