--- a/src/Components/Pages/Wedding.css
+++ b/src/Components/Pages/Wedding.css
@@ -34,6 +34,8 @@ background-position: center center;
     text-align: center;
     color: #FFB8BC;
     margin-top: 20px;
+    letter-spacing: 2px;
+    font-style: italic;
 
 }
 
