bug in background

--- a/src/Components/Pages/Getpampered/getpampered.css
+++ b/src/Components/Pages/Getpampered/getpampered.css
@@ -9,6 +9,9 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     background-image: url('./Mask\ group.svg');
 }
 
