--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -25,6 +25,7 @@
     align-items: center;
     background-color: #DDFDFF;
     color: black;
+    /* margin-bottom: 200px; */
 }
 
 .navinnercontainer{
