--- a/src/Components/Pages/Faq/Faq.css
+++ b/src/Components/Pages/Faq/Faq.css
@@ -1,16 +1,24 @@
 .faq-container{
     display: flex;
+    background-image: url("./bg.svg");
+    background-position: center;
     height: 100%;
     width:100%;
     flex-direction: column;
-    margin-top: 200px;
-    justify-content: space-evenly;
+   margin-top: 200px;
+    justify-content: center;
     align-items: center;
 }
 
-.accordion{
- width:1200px;
-border: 1px solid black;
-;
-margin-top: 20px;
+
+
+.accordion{  
+    border: 1px solid black;
+
 }
+
+/* .outeraccordion{
+  background-color: #4C2A76;
+  color: #FFB8BC;
+  border-radius: 30px;
+} */
