--- a/src/Components/Landing/newlanding.css
+++ b/src/Components/Landing/newlanding.css
@@ -1,5 +1,5 @@
 .landsec1{
-    height:450px;
+    height:710px;
     width: 100%;
     background-color: #270641;
     display: flex;
@@ -13,6 +13,7 @@
 .landsec1>P{
     color: #FFB8BC;
     position: relative;
+    font-size: 28px;
 
     
     
@@ -36,7 +37,7 @@
 
 .landtit{
     font-family: 'Poppins', sans-serif;
-    font-size: 35px;
+    font-size: 45px;
     font-weight: 600;
     margin-top: 40px;
 }
@@ -54,13 +55,17 @@
 
 .landser{
     font-family: 'Poppins', sans-serif;
-    font-size: 35px;
+    font-size: 40px;
+    font-weight: 600;
 }
 
 .landser2{
     font-family: 'Poppins', sans-serif;
-    font-size: 35px;
+    font-size: 40px;
     margin-top: 100px;
+
+    font-weight: 600;
+
 }
 
 .servcaro{
