--- a/src/Components/Pages/Faq/Faq.css
+++ b/src/Components/Pages/Faq/Faq.css
@@ -2,11 +2,14 @@
     display: flex;
     background-image: url("./bg.svg");
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100%;
     width:100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+   
 }
 
 
