--- a/src/Components/DesignerCollections/DesignerCollections.css
+++ b/src/Components/DesignerCollections/DesignerCollections.css
@@ -125,8 +125,9 @@
 }
 
 .prodcard img{
-    height: auto;
+    height: 320px;
     width: 270px;
+    border-radius: 14.8px 14.8px 0px 0px;
 }
 
 .prodcarddetails{
