--- a/src/Components/Productpage/Productpage.css
+++ b/src/Components/Productpage/Productpage.css
@@ -1,12 +1,34 @@
 .productspages{
     display: flex;
-    margin-top: 30px;
     width: 100%;
     justify-content: space-evenly;
+    padding-bottom: 40px;
+    padding-top: 30px;
+    background-image: url('../About/bg.svg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 
 .prodpagegalsection{
+    flex-direction: row;
+    display: flex;
     width: 50%;
+    justify-content: center;
+}
+
+.imgselection{
+    display: flex;
+    flex-direction: column;
+    margin-right: 30px;
+}
+
+.imgselection img{
+    height: auto;
+    width: 90px;
+    margin-top: 20px;
+    border-radius: 20px;
+    cursor: pointer;
 }
 
 .prodpagedatasection
@@ -15,4 +37,73 @@
     display: flex;
     flex-direction: column;
 
+}
+
+.productname{
+    /* font-weight: 700px; */
+    font-weight: bold;
+    font-family: 'Poppins', sans-serif;
+    font-size: 35px;
+}
+
+
+.productprice{
+    font-weight: 500;
+    color: #7026A0;
+    font-size: 30px;
+}
+
+.productdescriptiontitle{
+    font-weight: 600;
+    margin-top: 40px;
+    font-size: 20px;
+}
+
+.productdescription{
+    margin-top: 25px;
+    width: 80% ;
+}
+
+.washcarediv{
+    margin-top: 25px;
+    width: 110px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.sku{
+    margin-top: 10px;
+}
+
+.producttabs{
+    margin-top: 10px;
+}
+
+.Interestedbutton{
+    background: #4C2A76;
+    box-shadow: 0px 8px 12px rgba(76, 42, 118, 0.4);
+    border-radius: 10.8609px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 19.7471px;
+    line-height: 30px;
+    text-align: center;
+    color: #FFB8BC;
+    outline: none;
+    width: 200px;
+    height: 45px;
+    margin-top: 30px;
+    cursor: pointer;
+}
+
+.internationaldelivery{
+    margin-top: 20px;
+    color: #4C2A76;
+}
+
+.mainimg{
+    width: 420px;
+    height: 500px;
+    border-radius: 20px;
 }
