--- a/src/Components/Productpage/Productpage.css
+++ b/src/Components/Productpage/Productpage.css
@@ -8,6 +8,8 @@
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
+    height: 100vh;
+    align-items: center;
 }
 
 .prodpagegalsection{
