product form working

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -20,16 +20,22 @@
 }
 
 .t1-1{
+    
     font-weight: 400;
     color: white;
     font-size: 50px;
+    
 }
 
 .t2{
     color: white;
     font-size: 20px;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: 200;
+    align-self: center;
+    align-content: center;
 }
 
 .imagesection img{
