--- a/src/Components/Contactus/contact.css
+++ b/src/Components/Contactus/contact.css
@@ -1,5 +1,6 @@
 .contactuspage{
     width: 100%;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,8 +31,6 @@
     background-repeat: no-repeat;
     color: #FFB8BC;
     font-weight: 400;
-    
-    
 }   
 .cu1{
     font-family: 'Poppins', sans-serif;
@@ -51,7 +50,7 @@
 .bgcontact{
     background-image: url('./Contact\ us-\ FinalBG.png');
     width: 100%;
-    height:800px;
+  
     background-size:     cover;                   
     background-repeat:   no-repeat;
     background-position: center center; 
@@ -74,10 +73,13 @@
 }
 
 .mainsectionleft{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 620px;
     width: 40%;
     background-color: #4C2A76;
-    padding: 80px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -149,7 +151,7 @@
 }
 
 .locainner{
-    width: 60%;
+    width: 90%;
     display: flex;
     align-items: center;
     margin-top: 10px;
@@ -177,3 +179,52 @@
     width: 30px;
     margin-left: 20px;
 }
+
+
+@media screen and (max-width: 800px) {
+    .mainsection{
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
+        margin-top: 50px;
+    }
+    
+    .mainsectionleft{
+        height: 520px;
+        width: 90%;
+        background-color: #4C2A76;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .mainsectionright{
+        height: 620px;
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        /* background-color: #4C2A76; */
+    }
+    .mainsectionright{
+        height: 620px;
+        width: 90%;
+    }
+    .locainner{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        margin-top: 10px;
+    }
+
+    .clogo{
+        width: 350px;
+        height: 45px;
+        margin-top: -20px;
+    }
+    
+
+  }
