--- a/src/Components/Productpage/ProductMessgage/Productmsg.css
+++ b/src/Components/Productpage/ProductMessgage/Productmsg.css
@@ -120,9 +120,13 @@
   
 }
 
-input{
-    color: #FFB8BC !important;
+
+.css-1o9s3wi-MuiInputBase-input-MuiOutlinedInput-input{
+    color: #FFB8BC 
 }
+/* input{
+    color: #FFB8BC !important;
+} */
 
 .prodmsgsumbitbtn{
 background: #FFB8BC;
