--- a/src/Components/Pages/fabrics/Fabrics.css
+++ b/src/Components/Pages/fabrics/Fabrics.css
@@ -19,9 +19,20 @@
 .fabricscaro{
   width: 100%;
   height: 400px;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #270641;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+.caroimg{
+  height: 400px;
+  width: 100%;
+  margin-top: 20px,
+
 }
 
 .fabricsheader2{
