--- a/src/Components/Pages/GalleryCaro.css
+++ b/src/Components/Pages/GalleryCaro.css
@@ -10,8 +10,8 @@
     background-size: cover;
     flex-direction: column;
 }
-.caroimg{
-    height: 500px;
+.gcaroimg{
+    height: 400px;
     width: 100%;
     margin-top: 20px,
   }
