--- a/src/Components/Contactus/contact.css
+++ b/src/Components/Contactus/contact.css
@@ -1,15 +1,13 @@
 .contactuspage{
     width: 100%;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     /* background-color: #DDFDFF; */
 }
-
-
 .contactbanner{
-    height: 260px;
+    height: 500px;
+    overflow: hidden;
     width: 100%;
     background-color: #270641;
     display: flex;
