--- a/src/Components/Pages/ImageCons/ImageCons.css
+++ b/src/Components/Pages/ImageCons/ImageCons.css
@@ -5,8 +5,9 @@
 .topbar{
     width: 100%;
     background-color: #270641;
-    height: 300px;
+    height: 500px;
     display: flex;
+    overflow: hidden;
     justify-content: center;
     align-items: center;
 }
