--- a/src/Components/Pages/fabrics/Fabrics.css
+++ b/src/Components/Pages/fabrics/Fabrics.css
@@ -18,7 +18,7 @@
 
 .fabricscaro{
   width: 100%;
-  height: 400px;
+  height: 450px;
   /* flex-direction: column; */
   justify-content: center;
   align-items: center;
@@ -82,6 +82,10 @@
 
 .imgfabrowinner{
   margin-left: 40px;
+}
+
+.imgfabrowinner>p{
+  font-size: 20px;
 }
 
 
