--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -10,7 +10,9 @@
     font-family: 'Poppins', sans-serif;
     width: 100%;
     height: 366px;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%), url('./image\ 3.png');
+    background-size: cover;
+    background-position: center center;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%), url('./banner.svg');
 }
 
 .t1{
