--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -4,15 +4,15 @@
 .imagesection
 {
     display: flex;
-    flex-direction: column;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
     align-items: center;
     justify-content: center;
-    font-family: 'Poppins', sans-serif;
+    height: 600px;
     width: 100%;
-    height: 366px;
-    background-size: cover;
-    background-position: center center;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%), url('./banner.svg');
+    background-color: #1A032C;
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/teenz-fe41d.appspot.com/o/Group%20674.png?alt=media&token=c74e9073-6954-4e64-96a9-e3e5b48b8d167");
 }
 
 .t1{
@@ -44,7 +44,7 @@
     margin-top: 50px;
 }
 .aboutContainer{
-    background-image: url("./bg1.png");
+    background-image: url("./bg.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
