--- a/src/Components/Pages/Getpampered/getpampered.css
+++ b/src/Components/Pages/Getpampered/getpampered.css
@@ -3,6 +3,19 @@
     flex-direction: column;
     align-items: center;
 }
+.getpamperedBar{
+    width: 100%;
+    height: 600px;
+    background-color: #270641;
+    display: flex;
+    align-items: center;
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/teenz-fe41d.appspot.com/o/Header%20(1).png?alt=media&token=44b079cc-27db-487e-bd97-c7ad22ef723b");
+    justify-content: center;
+    /* background-image: url(path-to-file/img.jpg); */
+    background-repeat:no-repeat;
+    background-position: center ;
+    background-size: contain;
+}
 
 .backgroundforgetpam{
     display: flex;
