--- a/src/Components/Pages/ImageCons/ImageCons.css
+++ b/src/Components/Pages/ImageCons/ImageCons.css
@@ -4,16 +4,21 @@
 
 .topbar{
     width: 100%;
+    height: 600px;
     background-color: #270641;
-    height: 500px;
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/teenz-fe41d.appspot.com/o/Group%20722.png?alt=media&token=ef73764e-cacb-460e-a69a-4f63dd91fd08");
     display: flex;
-    overflow: hidden;
-    justify-content: center;
+
     align-items: center;
+    justify-content: center;
+    /* background-image: url(path-to-file/img.jpg); */
+    background-repeat:no-repeat;
+    background-position: center ;
+    background-size: contain;
 }
 
 .background{
-    background-image: url("./back.svg");
+   
     background-size: cover;
     background-position: center;
     width: 80%;
@@ -83,11 +88,9 @@
 .img-row1>img{
 
     width: 400px;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 40px;
-    
 
+    height: 300px;
+    object-fit: contain;
 
 }
 
