--- a/src/Components/Landing/TestiCaro.css
+++ b/src/Components/Landing/TestiCaro.css
@@ -1,47 +1,46 @@
 .carousel{
     height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 
 }
 .carousel-inner{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-}
 
    
-
-
-.carousel-item>p{
-    color:#FFB8BC;
-
+    width: 100%;
+   
 }
-.carousel-item>h3{
-    color:#FFB8BC;
-}
+
 .carousel-item{
     height: 100%;
-} 
-
-.avatar{
-    width:100px;
-    height: 100px;
-    background-color: black;
-    border-radius: 50%;
-    margin-top: -70px;
-    text-align: center;
-    z-index: 1000;
-    position: absolute;
-    margin-left: 35%;
-    background-position: center;
-    
-    background-image: url("./testiImage.svg");
-    
+    /* justify-content: center ;
+    align-items: center; */
 }
+
+
+
+.carousel-item>div{
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.carousel-item>div>div{
+    margin-left: 20px;
+}
+
+
+.carousel-item>div>div>p{
+    color:#FFB8BC;
+
+}
+.carousel-item>div>div>h3{
+    color:#FFB8BC;
+}
+
 .Landingtesti{
     font-family: 'Poppins', sans-serif;
     font-size: 35px;
@@ -50,8 +49,9 @@
     margin-bottom: 20px;
 }
 
+
+
 .testcont{
-    
     margin-top: 30px;
     width: 80%;
     border-radius: 40px;
