--- a/src/Components/Contactus/contact.css
+++ b/src/Components/Contactus/contact.css
@@ -87,7 +87,7 @@
 }
 
 .mainsectionright{
-    height: 620px;
+    height: 675px;
     width: 40%;
     display: flex;
     flex-direction: column;
@@ -147,8 +147,9 @@
     flex-direction: column;
     height: 200px;
     justify-content: space-evenly;
-    align-items: flex-start;
+    align-items: center;
     margin-top: 40px;
+    margin-left: 50px;
 }
 
 .locainner{
