--- a/src/Components/Landing/newlanding.css
+++ b/src/Components/Landing/newlanding.css
@@ -57,6 +57,7 @@
     font-family: 'Poppins', sans-serif;
     font-size: 40px;
     font-weight: 600;
+    color:#270641;
    
 }
 
@@ -65,6 +66,7 @@
     font-size: 40px;
     margin-top: 70px;
     font-weight: 600;
+    color:#270641;
     
 
 }
