--- a/src/Components/Pages/fabrics/Fabrics.css
+++ b/src/Components/Pages/fabrics/Fabrics.css
@@ -23,7 +23,7 @@
 
 .fabricscaro{
   width: 100%;
-  height: 450px;
+  height: 600px;
   /* flex-direction: column; */
   justify-content: center;
   align-items: center;
@@ -34,7 +34,7 @@
 }
 
 .caroimg{
-  height: 400px;
+  height: 550px;
   width: 100%;
   /* margin-top: 500px, */
 }
@@ -55,6 +55,8 @@
   align-items: center;
   width: 70%;
   text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
   margin-top: 40px;
 }
 
